# gr-radar

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
.conda/: README.md  conda-forge.yml
apps/: CMakeLists.txt
docs/: CMakeLists.txt  README.radar  README.radar~
examples/: plot_results.py  plot_results.py~  rcs_messung.txt  rcs_messung_person.txt  rcs_messung_platte.txt  rcs_test.txt  store_msgs.txt  top_block.py
grc/: CMakeLists.txt  radar_crop_matrix_vcvc.block.yml  radar_crop_matrix_vcvc.xml  radar_cross_correlate_vcvc.xml  radar_estimator_cw.block.yml  radar_estimator_cw.xml  radar_estimator_fmcw.block.yml  radar_estimator_fmcw.xml  radar_estimator_fsk.block.yml  radar_estimator_fsk.xml  radar_estimator_msg_gate.xml  radar_estimator_ofdm.block.yml  radar_estimator_ofdm.xml  radar_estimator_rcs.block.yml  radar_estimator_rcs.xml  radar_estimator_sync_pulse_c.block.yml  radar_estimator_sync_pulse_c.xml  radar_find_max_peak_c.block.yml  radar_find_max_peak_c.xml  radar_msg_gate.block.yml  radar_msg_gate.xml  radar_msg_manipulator.block.yml  radar_msg_manipulator.xml  radar_ofdm_cyclic_prefix_remover_cvc.block.yml  radar_ofdm_cyclic_prefix_remover_cvc.xml  radar_ofdm_divide_vcvc.block.yml  radar_ofdm_divide_vcvc.xml  radar_os_cfar_2d_vc.block.yml  radar_os_cfar_2d_vc.xml  radar_os_cfar_c.block.yml  radar_os_cfar_c.xml  radar_print_peaks.xml  radar_print_results.block.yml  radar_print_results.xml  radar_qtgui_rv_diagram.xml  radar_qtgui_scatter_plot.block.yml  radar_qtgui_scatter_plot.xml  radar_qtgui_spectrogram_plot.block.yml  radar_qtgui_spectrogram_plot.xml  radar_qtgui_time_plot.block.yml  (+28 more)
hier/: ts_fft_py_cc.grc
include/radar/: CMakeLists.txt  api.h  crop_matrix_vcvc.h  cross_correlate_vcvc.h  estimator_cw.h  estimator_fmcw.h  estimator_fsk.h  estimator_msg_gate.h  estimator_ofdm.h  estimator_rcs.h  estimator_sync_pulse_c.h  find_max_peak_c.h  msg_gate.h  msg_manipulator.h  ofdm_cyclic_prefix_remover_cvc.h  ofdm_divide_vcvc.h  os_cfar_2d_vc.h  os_cfar_c.h  print_peaks.h  print_results.h  qtgui_rv_diagram.h  qtgui_scatter_plot.h  qtgui_spectrogram_plot.h  qtgui_time_plot.h  qtqui_range_velocity.h  signal_generator_cw_c.h  signal_generator_fmcw_c.h  signal_generator_fsk_c.h  signal_generator_sync_pulse_c.h  split_cc.h  split_fsk_cc.h  static_target_simulator_cc.h  tracking_particle_singletarget.h  tracking_singletarget.h  transpose_matrix_vcvc.h  trigger_command.h  ts_cross_correlate_cvc.h  ts_fft_cc.h  usrp_echotimer_cc.h
lib/: .usrp_echotimer_cc_impl.cc.swp  .usrp_echotimer_cc_impl.h.swp  CMakeLists.txt  crop_matrix_vcvc_impl.cc  crop_matrix_vcvc_impl.h  cross_correlate_vcvc_impl.cc  cross_correlate_vcvc_impl.h  estimator_cw_impl.cc  estimator_cw_impl.h  estimator_fmcw_impl.cc  estimator_fmcw_impl.h  estimator_fsk_impl.cc  estimator_fsk_impl.h  estimator_msg_gate_impl.cc  estimator_msg_gate_impl.h  estimator_ofdm_impl.cc  estimator_ofdm_impl.h  estimator_rcs_impl.cc  estimator_rcs_impl.h  estimator_sync_pulse_c_impl.cc  estimator_sync_pulse_c_impl.h  find_max_peak_c_impl.cc  find_max_peak_c_impl.h  msg_gate_impl.cc  msg_gate_impl.h  msg_manipulator_impl.cc  msg_manipulator_impl.h  ofdm_cyclic_prefix_remover_cvc_impl.cc  ofdm_cyclic_prefix_remover_cvc_impl.h  ofdm_divide_vcvc_impl.cc  ofdm_divide_vcvc_impl.h  os_cfar_2d_vc_impl.cc  os_cfar_2d_vc_impl.h  os_cfar_c_impl.cc  os_cfar_c_impl.h  print_peaks_impl.cc  print_peaks_impl.h  print_results_impl.cc  print_results_impl.h  qa_radar.cc  (+48 more)
misc/: README
python/: CMakeLists.txt  __init__.py  qa_crop_matrix_vcvc.py  qa_cross_correlate_vcvc.py  qa_estimator_cw.py  qa_estimator_fmcw.py  qa_estimator_fsk.py  qa_estimator_msg_gate.py  qa_estimator_ofdm.py  qa_estimator_rcs.py  qa_estimator_sync_pulse_c.py  qa_find_max_peak_c.py  qa_msg_gate.py  qa_msg_manipulator.py  qa_ofdm_cyclic_prefix_remover_cvc.py  qa_ofdm_divide_vcvc.py  qa_os_cfar_2d_vc.py  qa_os_cfar_c.py  qa_signal_generator_cw_c.py  (+14 more)
python/radar/bindings/: CMakeLists.txt  crop_matrix_vcvc.json  crop_matrix_vcvc_python.cc  estimator_cw.json  estimator_cw_python.cc  estimator_fmcw.json  estimator_fmcw_python.cc  estimator_fsk.json  estimator_fsk_python.cc  estimator_ofdm.json  estimator_ofdm_python.cc  estimator_rcs.json  estimator_rcs_python.cc  estimator_sync_pulse_c.json  estimator_sync_pulse_c_python.cc  find_max_peak_c.json  find_max_peak_c_python.cc  msg_gate.json  msg_gate_python.cc  msg_manipulator.json  msg_manipulator_python.cc  ofdm_cyclic_prefix_remover_cvc.json  ofdm_cyclic_prefix_remover_cvc_python.cc  ofdm_divide_vcvc.json  ofdm_divide_vcvc_python.cc  os_cfar_2d_vc.json  os_cfar_2d_vc_python.cc  os_cfar_c.json  os_cfar_c_python.cc  print_results.json  print_results_python.cc  python_bindings.cc  qtgui_scatter_plot.json  qtgui_scatter_plot_python.cc  qtgui_spectrogram_plot.json  qtgui_spectrogram_plot_python.cc  qtgui_time_plot.json  qtgui_time_plot_python.cc  signal_generator_cw_c.json  signal_generator_cw_c_python.cc  (+22 more)
python/radar/bindings/docstrings/: crop_matrix_vcvc_pydoc_template.h  estimator_cw_pydoc_template.h  estimator_fmcw_pydoc_template.h  estimator_fsk_pydoc_template.h  estimator_ofdm_pydoc_template.h  estimator_rcs_pydoc_template.h  estimator_sync_pulse_c_pydoc_template.h  find_max_peak_c_pydoc_template.h  msg_gate_pydoc_template.h  msg_manipulator_pydoc_template.h  ofdm_cyclic_prefix_remover_cvc_pydoc_template.h  ofdm_divide_vcvc_pydoc_template.h  os_cfar_2d_vc_pydoc_template.h  os_cfar_c_pydoc_template.h  print_results_pydoc_template.h  qtgui_scatter_plot_pydoc_template.h  qtgui_spectrogram_plot_pydoc_template.h  qtgui_time_plot_pydoc_template.h  signal_generator_cw_c_pydoc_template.h  signal_generator_fmcw_c_pydoc_template.h  signal_generator_fsk_c_pydoc_template.h  signal_generator_sync_pulse_c_pydoc_template.h  split_cc_pydoc_template.h  split_fsk_cc_pydoc_template.h  static_target_simulator_cc_pydoc_template.h  tracking_singletarget_pydoc_template.h  transpose_matrix_vcvc_pydoc_template.h  trigger_command_pydoc_template.h  ts_fft_cc_pydoc_template.h  usrp_echotimer_cc_pydoc_template.h
swig/: CMakeLists.txt  radar_swig.i
(+563 files in other folders)
